bring function to life

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="info">
       <h1>
-        Obliczanie pola trójkąta
+        Obliczanie pola trójkąta, część 2
       </h1>
     </div>
     <script type="text/javascript" src="js/scripts.js"></script>
